lab9/tests/algo/good/variable_expression_trio.al
int x;

void main(int z)
begin
  int y;
  
  x;
  y;
  z;

end