lab9/tests/algo/bad/assign_int_to_rel_op.al


int main(void)
begin
   int x, y;
   int z;

   z = x < y;

end